--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
